--- a/moteur-administration/Dockerfile
+++ b/moteur-administration/Dockerfile
@@ -1,7 +1,11 @@
-FROM python:3.11
+# Dockerfile
+FROM python:3.9-slim
 
 WORKDIR /app
-COPY . .
+
+COPY requirements.txt .
 RUN pip install -r requirements.txt
-RUN echo "hello"
-RUN python app.py 
+
+COPY app2.py .
+
+CMD ["python", "app2.py"]
