--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,12 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: les-loups
     volumes:
-      - ./wv_views.sql:/docker-entrypoint-initdb.d/wv_schemas.sql
+      - ./01_wv_schemas.sql:/docker-entrypoint-initdb.d/01_wv_schemas.sql
+      - ./02_wv_index.sql:/docker-entrypoint-initdb.d/02_wv_index.sql
+      - ./bdd/functions/wv_funcs.sql:/docker-entrypoint-initdb.d/wv_funcs.sql
+      - ./bdd/procedures/wv_procs.sql:/docker-entrypoint-initdb.d/wv_procs.sql
+      - ./bdd/triggers/wv_triggers.sql:/docker-entrypoint-initdb.d/wv_triggers.sql
+      - ./bdd/view/:/docker-entrypoint-initdb.d/view
     ports:
       - "5432:5432"
     
