--- a/moteur-administration/Dockerfile
+++ b/moteur-administration/Dockerfile
@@ -6,8 +6,8 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
-COPY app2.py .
+COPY admin-engine.py .
 copy admin_console.py .
 
-CMD ["python", "app2.py"]
+CMD ["python", "admin-engine.py"]
 CMD ["python", "admin_console.py"]
