--- a/moteur-administration/Dockerfile
+++ b/moteur-administration/Dockerfile
@@ -7,7 +7,6 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 COPY admin-engine.py .
-copy admin_console.py .
+COPY admin_console.py .
 
 CMD ["python", "admin-engine.py"]
-CMD ["python", "admin_console.py"]
